corregido error en propiedad Height de ventana

--- a/RazorExtNet/Views/Usuario/InicioSesionRazor.cshtml
+++ b/RazorExtNet/Views/Usuario/InicioSesionRazor.cshtml
@@ -31,7 +31,7 @@
                      .Border(false)
                  )
       ).Width(300)
-      .Height("auto")
+      .Height(140)
       .BodyPadding(5)
       .Layout(LayoutType.Fit)
       .Title("Inicio de Sesión"))
